fix scrollbar appear above the text

--- a/docs/en/docs/assets/css/extra.css
+++ b/docs/en/docs/assets/css/extra.css
@@ -1,24 +1,24 @@
 :root {
-    --md-primary-fg-color:        #0b3694;
-    --md-primary-fg-color--light: #ECB7B7;
-    --md-primary-fg-color--dark:  #0d1117;
-    --md-accent-fg-color:  #0b3694;
-  }
+  --md-primary-fg-color: #0b3694;
+  --md-primary-fg-color--light: #ecb7b7;
+  --md-primary-fg-color--dark: #0d1117;
+  --md-accent-fg-color: #0b3694;
+}
 
-  .divider {
-    width: 100%;
-    height: 3px;
-    background-color: #0b3694;
-    margin-bottom: 5px
-  }
+.divider {
+  width: 100%;
+  height: 3px;
+  background-color: #0b3694;
+  margin-bottom: 5px;
+}
 
-.center-image{
+.center-image {
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.right-image{
+.right-image {
   display: flex;
   justify-content: flex-end;
 }
@@ -28,11 +28,10 @@
   align-self: center;
 }
 
-.md-typeset .md-button{
+.md-typeset .md-button {
   display: table;
   margin: auto;
 }
-
 
 .md-typeset__table {
   min-width: 100%;
@@ -42,7 +41,7 @@
   display: inline-table;
   box-shadow: 0 0.2rem 0.5rem rgb(0 0 0 / 5%), 0 0 0.05rem rgb(0 0 0 / 10%);
   border: none;
-  border: .05rem solid var(--md-default-fg-color--lightest);
+  border: 0.05rem solid var(--md-default-fg-color--lightest);
 }
 
 .md-typeset table:not([class]) th {
@@ -50,24 +49,14 @@
   color: #ffffff;
 }
 
-.md-header__inner, .md-tabs__inner {
+.md-header__inner,
+.md-tabs__inner {
   max-width: 90%;
 }
 
-.md-header__button.md-logo img, .md-header__button.md-logo svg{
+.md-header__button.md-logo img,
+.md-header__button.md-logo svg {
   width: auto;
-}
-
-@media only screen and (max-width: 76.25em) {
-  .md-nav__title .md-nav__button.md-logo img, .md-nav__title .md-nav__button.md-logo svg{
-    width: 90%;
-    height: auto;
-  }
-
-  .md-nav--primary .md-nav__title {
-    height: 100px;
-  }
-
 }
 
 .md-nav__link--active {
@@ -80,28 +69,12 @@ li.md-nav__item.md-nav__item--active.md-nav__item--nested > .md-nav__link {
   font-weight: bold;
 }
 
-.md-footer__inner, .md_grid, .md-footer-copyright__highlight::backdrop, body > div.md-container > nav > div > ul > li:nth-child(2), body > header > nav > div.md-header__title > div > div:nth-child(1) > span {
+.md-footer__inner,
+.md_grid,
+.md-footer-copyright__highlight::backdrop,
+body > div.md-container > nav > div > ul > li:nth-child(2),
+body > header > nav > div.md-header__title > div > div:nth-child(1) > span {
   display: none;
-}
-
-@media only screen and (min-width: 76.25em) {
-  .md-main__inner {
-    max-width: 90%;
-  }
-  .md-sidebar--primary {
-    left: 100px;
-  }
-  .md-sidebar--secondary {
-    right: 0;
-    margin-left: 0;
-    -webkit-transform: none;
-    transform: none;   
-  }
-
-  .md-nav__title .md-nav__button.md-logo img, .md-nav__title .md-nav__button.md-logo svg{
-    width: 90%;
-    height: auto;
-  }
 }
 
 /* Landing page cards */
@@ -113,26 +86,26 @@ li.md-nav__item.md-nav__item--active.md-nav__item--nested > .md-nav__link {
   flex-wrap: wrap;
 }
 
-.card-link{
+.card-link {
   width: 50%;
   padding: 1em;
 }
 
-.card-link-2{
+.card-link-2 {
   width: 25%;
   padding: 1em;
 }
 
 .card {
   /* Add shadows to create the "card" effect */
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   transition: 0.3s;
   width: 100%;
   border-radius: 10px;
   display: flex;
 }
 
-.card-link-2 > .card{
+.card-link-2 > .card {
   border: 1px solid #0b3694;
 }
 
@@ -145,11 +118,11 @@ li.md-nav__item.md-nav__item--active.md-nav__item--nested > .md-nav__link {
 
 /* On mouse-over, add a deeper shadow */
 .card:hover {
-  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
 }
 
 .card-link-2 > .card:hover {
-  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.5);
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.5);
 }
 
 /* Add some padding inside the card container */
@@ -167,23 +140,22 @@ li.md-nav__item.md-nav__item--active.md-nav__item--nested > .md-nav__link {
 }
 
 /* Block quote classes */
-
-.callout{
+.callout {
   background-color: #e5f8fb;
   display: flex;
 }
 
-.callout-icon{
+.callout-icon {
   font-size: 60px;
   padding-top: 20px;
   padding-bottom: 15px;
 }
 
-.callout-heading{
+.callout-heading {
   padding-left: 20px;
 }
 
-.callout-text{
+.callout-text {
   font-size: 26px;
   text-decoration: underline;
   padding-top: 30px;
@@ -203,7 +175,43 @@ li.md-nav__item.md-nav__item--active.md-nav__item--nested > .md-nav__link {
 }
 
 .md-typeset blockquote {
-  border-left: .2rem solid #0b3694;
+  border-left: 0.2rem solid #0b3694;
   color: #00b8d4;
-  padding-left: .6rem;
+  padding-left: 0.6rem;
+}
+
+/*Media Queries*/
+@media only screen and (min-width: 76.25em) {
+  .md-main__inner {
+    max-width: 90%;
+  }
+  .md-sidebar--primary {
+    left: 100px;
+  }
+  .md-sidebar--secondary {
+    right: 0;
+    margin-left: 0;
+    -webkit-transform: none;
+    transform: none;
+  }
+  .md-content__inner.md-typeset {
+    margin-left: 48px !important;
+  }
+  .md-nav__title .md-nav__button.md-logo img,
+  .md-nav__title .md-nav__button.md-logo svg {
+    width: 90%;
+    height: auto;
+  }
+}
+
+@media only screen and (max-width: 76.25em) {
+  .md-nav__title .md-nav__button.md-logo img,
+  .md-nav__title .md-nav__button.md-logo svg {
+    width: 90%;
+    height: auto;
+  }
+
+  /* .md-nav--primary .md-nav__title {
+    height: 100px;
+  } */
 }
